--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -12,7 +12,7 @@ jobs:
     if: github.event.pull_request.draft == false
     uses: Informasjonsforvaltning/workflows/.github/workflows/test-rust.yaml@main
     with:
-      repo: ${{ github.repository }
+      repo: ${{ github.repository }}
     secrets:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
