disable integration tests in ci

--- a/.github/workflows/deploy-prod&demo.yaml
+++ b/.github/workflows/deploy-prod&demo.yaml
@@ -11,7 +11,7 @@ jobs:
     name: Run tests when merging to main
     uses: Informasjonsforvaltning/workflows/.github/workflows/test-rust.yaml@main
     with:
-      repo: ${{ github.repository }}
+      cargo_args: --lib
     secrets:
       GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
