--- a/.github/workflows/deploy-staging.yaml
+++ b/.github/workflows/deploy-staging.yaml
@@ -29,7 +29,7 @@ jobs:
 
   deploy:
     name: Deploy to staging environment with reusable workflow when test and build is successful
-    if: github.event.pull_request.draft == false
+    if: ${{ github.actor != 'dependabot[bot]' && github.event.pull_request.draft == false }}
     needs: [test,build]
     uses: Informasjonsforvaltning/workflows/.github/workflows/deploy.yaml@main
     with:
