--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,5 @@
 ---
-version: '2'
+version: '3.8'
 services:
   zookeeper:
     image: confluentinc/cp-zookeeper
@@ -8,9 +8,7 @@ services:
       ZOOKEEPER_TICK_TIME: 2000
       KAFKA_OPTS: -Dzookeeper.4lw.commands.whitelist=ruok
     healthcheck:
-      test:
-        - CMD-SHELL
-        - echo 'ruok' | nc -w 2 localhost 2181 | grep imok
+      test: echo 'ruok' | nc -w 2 localhost 2181 | grep imok
       interval: 3s
 
   # https://developer.confluent.io/quickstart/kafka-docker
@@ -20,7 +18,7 @@ services:
       zookeeper:
         condition: service_healthy
     ports:
-      - 9092:9092
+      - "9092:9092"
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
@@ -42,16 +40,14 @@ services:
     # Ready when custom topics are created.
     # Make sure number at the end (after 'grep') matches desired topics.
     healthcheck:
-      test:
-        - CMD-SHELL
-        - /bin/kafka-topics --bootstrap-server 127.0.0.1:9092 --list | sed "/_.*/d" | wc -l | grep 1
+      test: /bin/kafka-topics --bootstrap-server 127.0.0.1:9092 --list
       interval: 3s
 
   schema-registry:
     image: confluentinc/cp-schema-registry
     container_name: schema-registry
     ports:
-      - 8081:8081
+      - "8081:8081"
     depends_on:
       zookeeper:
         condition: service_healthy
