--- a/deploy/base/deployment-fdk-mqa-property-checker.yaml
+++ b/deploy/base/deployment-fdk-mqa-property-checker.yaml
@@ -28,10 +28,10 @@ spec:
             - containerPort: 8080
           resources:
             requests:
-              memory: "500Mi"
-              cpu: "500m"
+              memory: "1Gi"
+              cpu: "300m"
             limits:
-              memory: "500Mi"
+              memory: "1Gi"
           livenessProbe:
             exec:
               command:
