improve: use new secrets

--- a/deploy/base/deployment-fdk-mqa-property-checker.yaml
+++ b/deploy/base/deployment-fdk-mqa-property-checker.yaml
@@ -26,6 +26,32 @@ spec:
           imagePullPolicy: Always
           ports:
             - containerPort: 8080
+          env:
+            - name: NAMESPACE
+              valueFrom:
+                secretKeyRef:
+                  name: common
+                  key: NAMESPACE
+            - name: REFERENCE_DATA_BASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: commonurl
+                  key: FDK_REFERENCE_DATA_BASE_URI
+            - name: REFERENCE_DATA_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: reference-data
+                  key: API_KEY
+            - name: SCHEMA_REGISTRY
+              valueFrom:
+                secretKeyRef:
+                  name: fdk-metadata-quality
+                  key: SCHEMA_REGISTRY
+            - name: BROKERS
+              valueFrom:
+                secretKeyRef:
+                  name: fdk-metadata-quality
+                  key: BROKERS
           resources:
             requests:
               memory: "1Gi"
